Fixed a fallback issue on what views are visible and added an example to show how multiple dropzones don't intefere with each other

--- a/apps/drag_drop_upload/resources/main_page.css
+++ b/apps/drag_drop_upload/resources/main_page.css
@@ -1,3 +1,16 @@
+.nav-menu {
+	background: #fff;
+}
+.menu-item {
+	line-height: 30px;
+	padding: 0px 10px;
+	cursor: pointer;
+}
+/* over view view */
+.overview {
+	text-align: center;
+}
+/* single dropzone view */
 div.sc-view.my-drop-view {
 	background: #fff;
 	border: #ccc 2px dashed;
